<resources>
    <string name="app_name">MyFlexibleFragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_profile">Ini activity Profile</string>
    <string name="this_category">ini Fragment Category</string>
    <string name="category_lifestyle">Ke fragment Lifestyle</string>
    <string name="category_Name">Category Name</string>
    <string name="category_description">Category Description</string>
    <string name="to_profile">Ke Halaman Profile Activity</string>
    <string name="show_dialog">Tampilkan Sebuah Dialog</string>
    <string name="hello_home_fragment">Hello ini Home Fragment</string>
    <string name="to_category">Ke fragment Category</string>
    <string name="question_coach">Siapa jodoh Anggun?</string>
    <string name="Jung_Jaehyun">Jung Jaehyun</string>
    <string name="Lee_Taeyong">Lee Taeyong</string>
    <string name="Kim_Mingyu">Kim Mingyu</string>
    <string name="Cha_Eunwoo">Cha Eunwoo</string>
    <string name="choose">Pilih</string>
    <string name="close">Tutup</string>

</resources>